Minor alignment fix for lergo-176

--- a/app/styles/_lesson.scss
+++ b/app/styles/_lesson.scss
@@ -103,7 +103,7 @@ font-size:14px;
 		color: white;
 		border-radius: 10px;
 		float:left;
-		width:80px;
+		width:90px;
 	}
 	
 	.age-limit-4   { background-color:#D68ED7 }
@@ -173,6 +173,6 @@ font-size:14px;
   .next-step{
   	position:relative;
     margin:0 auto;
-	width:500px;
+	width:560px;
   }
 }
